[terra-application-layout] fix z-index for theming

--- a/packages/terra-application-layout/src/header/ApplicationHeader.module.scss
+++ b/packages/terra-application-layout/src/header/ApplicationHeader.module.scss
@@ -7,6 +7,7 @@
     position: relative;
     
     &::before {
+      background-color: var(--terra-application-layout-header-before-background-color, transparent);
       background-image: var(--terra-application-layout-header-before-background-image, none);
       content: '';
       height: 100%;
@@ -14,7 +15,6 @@
       position: absolute;
       top: 0;
       width: 100%;
-      z-index: -1;
     }
   }
 
